# ridder_lab_retreat_ai_hackathon_2026

./: .env.example  .gitignore  AGENTS.md  BRAINSTORM_lab_automation_ideas.md  README.md  automation_ideas.md  pyproject.toml
.agents/skills/: README.md
.agents/skills/slack-bolt-app/: SKILL.md
additional_information/: additional_starting_sources_local_reviewer_pipeline.md  claude_DR_automated_literature_surveys_local_RAG_local_Deep_Research_code_review_git_hygiene_meeting_transcription_enhancement_journal_clubs.md
additional_information_and_resources/Teams_transcript_example/: Meeting Franka and Paul 20260501.docx  Meeting Franka and Paul 20260501.vtt
submissions/: README.md  TEMPLATE.md
submissions/team_Frankathon/: PROPOSAL.md  evaluate.py  main.py  pyproject.toml
useful_context/: ai_first_lab_survey.md
