[project]
name = "ridder_lab_hackathon_2026"
version = "0.1.0"
description = "Shared dev environment for the De Ridder Lab AI hackathon (Spring 2026 retreat). Pre-installs the common toolkit so teams can start hacking immediately."
requires-python = ">=3.11"
readme = "README.md"

# A deliberately generous starter kit. Teams can add tool-specific deps in
# their own pyproject (under submissions/team_<name>/) without touching this.
dependencies = [
    # ---- Slack ----
    "slack-bolt>=1.21.0",
    "slack-sdk>=3.27.0",
    # ---- Config / env ----
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.1",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    # ---- HTTP & web parsing ----
    "requests>=2.32.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.1.0",
    "tenacity>=9.0.0",
    "diskcache>=5.6.3",
    # ---- LLM access ----
    "ollama>=0.6.0",
    "litellm>=1.50.0",
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    # ---- Orchestration ----
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-ollama>=0.2.0",
    "langchain-anthropic>=0.3.0",
    "langchain-openai>=0.2.0",
    # ---- Templating ----
    "jinja2>=3.1.0",
    # ---- PDF / docs ----
    "pypdf>=5.0.0",
    "markdown-it-py>=3.0.0",
    # ---- Search ----
    "tavily-python>=0.5.0",
    "arxiv>=2.1.0",
    # ---- Data ----
    "pandas>=2.2.0",
    "duckdb>=1.0.0",
    # ---- Notebooks / interactive dev ----
    "ipython>=8.20.0",
    "jupyterlab>=4.2.0",
    # ---- Tests ----
    "pytest>=8.0.0",
]

# Optional groups that pull in things with heavier system requirements.
# Activate explicitly with `uv sync --extra <name>`. Don't add these to the
# core list; they break installs for teams that don't need them.
[project.optional-dependencies]
crawl = [
    "crawl4ai>=0.7.4",   # needs Playwright + Chromium; uv will install the Python side, you still need browser binaries.
    "playwright>=1.46.0",
]
viz = [
    "matplotlib>=3.9.0",
    "plotly>=5.24.0",
    "altair>=5.4.0",
]
bio = [
    "biopython>=1.84",
    "scanpy>=1.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# This is a venv-only project; nothing to actually package. Tell hatchling
# not to look for source files.
[tool.hatch.build.targets.wheel]
bypass-selection = true
